--- a/Login.html
+++ b/Login.html
@@ -6,9 +6,8 @@
     <title>Escola</title>
 </head>
 <body>
-    <h1>Bem vindo a escola</h1>
-    <h2>Entrar</h2>
-    <form action="menu.html" method="get">
+    <h1>Criar Conta</h1>
+    <form action="index.html">
         <div>
             <label for="campo-email">Email</label>
             <input type="email" id="campo-email" name="email" required>
@@ -17,7 +16,7 @@
             <label for="campo-senha">Senha</label>
             <input type="password" id="campo-senha" name="Senha" required>
         </div>
-        <button type="submit">Entrar</button>       <a href="Login.html">Criar Conta</a>
+        <button type="submit">Criar</button>
     </form>
 </body>
 </html>
