--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <h1>Inicio</h1>
 
     <a href="opcoes/matricula/matricula.html">Matricular-se</a><br>
-    <a href="">Horario de Aulas</a><br>
+    <a href="opcoes/aula/aula.html">Horario de Aulas</a><br>
     <a href="">Alunos</a><br>
     <a href="">Professores</a><br>
     <a href="">Materias</a><br>
