Horario de aulas finalizado

--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 
     <a href="opcoes/matricula/matricula.html">Matricular-se</a><br>
     <a href="opcoes/aula/aula.html">Horario de Aulas</a><br>
-    <a href="">Alunos</a><br>
+    <a href="opcoes/alunos/alunos.html">Alunos</a><br>
     <a href="">Professores</a><br>
     <a href="">Materias</a><br>
 </body>
