--- a/opcoes/aula/aula.html
+++ b/opcoes/aula/aula.html
@@ -8,9 +8,23 @@
 </head>
 <body>
     <a href="/menu.html">Voltar</a>
+
     <h1>horario de aulas</h1>
 
-    <h2>1º Serie</h2>
+    <a href="#1">1º Serie</a><br>
+    <a href="#2">2º Serie</a><br>
+    <a href="#3">3º Serie</a><br>
+    <a href="#4">4º Serie</a><br>
+    <a href="#5">5º Serie</a><br>
+    <a href="#6">6º Serie</a><br>
+    <a href="#7">7º Serie</a><br>
+    <a href="#8">8º Serie</a><br>
+    <a href="#9">9º Serie</a><br>
+    <a href="#10">Primeirão</a><br>
+    <a href="#11">Segundão</a><br>
+    <a href="#12">Terceirão</a><br>
+
+    <h2 id="1">1º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -73,7 +87,7 @@
         </tr>
     </tbody>
 </table>
-    <h2>2º Serie</h2>
+    <h2 id="2">2º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -95,7 +109,7 @@
     </tbody>
 </table>
 
-    <h2>3º Serie</h2>
+    <h2 id="3">3º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -117,7 +131,7 @@
     </tbody>
 </table>
 
-    <h2>4º Serie</h2>
+    <h2 id="4">4º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -139,7 +153,7 @@
     </tbody>
 </table>
 
-    <h2>5º Serie</h2>
+    <h2 id="5">5º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -161,7 +175,7 @@
     </tbody>
 </table>
 
-    <h2>6º Serie</h2>
+    <h2 id="6">6º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -183,7 +197,7 @@
     </tbody>
 </table>
 
-    <h2>7º Serie</h2>
+    <h2 id="7">7º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -205,7 +219,7 @@
     </tbody>
 </table>
 
-    <h2>8º Serie</h2>
+    <h2 id="8">8º Serie</h2>
 
     <table border="1">
         <thead>
@@ -269,7 +283,7 @@
             </tr>
         </tbody>
     </table>
-    <h2>9º Serie</h2>
+    <h2 id="9">9º Serie</h2>
     <table border="1">
     <thead>
         <tr>
@@ -291,7 +305,7 @@
     </tbody>
 </table>
 
-    <h2>Primeirão</h2>
+    <h2 id="10">Primeirão</h2>
     <table border="1">
     <thead>
         <tr>
@@ -313,7 +327,7 @@
     </tbody>
 </table>
 
-    <h2>Segundão</h2>
+    <h2 id="11">Segundão</h2>
     <table border="1">
     <thead>
         <tr>
@@ -335,7 +349,7 @@
     </tbody>
 </table>
 
-    <h2>Terceirão</h2>
+    <h2 id="12">Terceirão</h2>
     <table border="1">
     <thead>
         <tr>
