começo de "Professores" e de "Materias"

--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola</title>
+    <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 <body>
     <h1>Inicio</h1>
@@ -11,7 +12,7 @@
     <a href="opcoes/matricula/matricula.html">Matricular-se</a><br>
     <a href="opcoes/aula/aula.html">Horario de Aulas</a><br>
     <a href="opcoes/alunos/alunos.html">Alunos</a><br>
-    <a href="">Professores</a><br>
-    <a href="">Materias</a><br>
+    <a href="opcoes/professores/professores.html">Professores</a><br>
+    <a href="opcoes/materia/materia.html">Materias</a><br>
 </body>
 </html>
