--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola</title>
+    <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 <body>
     <h1>Criar Conta</h1>
