--- a/opcoes/materia/materia.html
+++ b/opcoes/materia/materia.html
@@ -7,6 +7,73 @@
     <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 <body>
-    
+    <h1>Materias</h1>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Professor</th>
+                <th>Materia</th>
+                <th>Conteudos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Fernanda, Ana, Arthur</td>
+                <td>Matematica</td>
+                <td>operações básicas, frações, geometria, álgebra.</td>
+            </tr>
+            <tr>
+                <td>Fernanda, Ana, Arthur</td>
+                <td>Matemática</td>
+                <td>operações básicas, frações, geometria, álgebra.</td>
+            </tr>
+            <tr>
+                <td>Bruno, Isabela, João</td>
+                <td>Português</td>
+                <td>leitura, interpretação de texto, gramática, redação.</td>
+            </tr>
+            <tr>
+                <td>Camila, Eduardo, Heloísa</td>
+                <td>Ciências</td>
+                <td>biologia, física e química básicas, corpo humano, ecossistemas.</td>
+            </tr>
+            <tr>
+                <td>Gabriel, Júlia, Tiago</td>
+                <td>História</td>
+                <td>história do Brasil, civilizações antigas, Idade Média.</td>
+            </tr>
+            <tr>
+                <td>Larissa, Enzo, Vitória</td>
+                <td>Geografia</td>
+                <td>relevo, clima, mapas, geopolítica, regionalização.</td>
+            </tr>
+            <tr>
+                <td>Sofia, Lucas, Beatriz</td>
+                <td>Inglês</td>
+                <td>vocabulário básico, verbos, diálogos simples, leitura.</td>
+             </tr>
+            <tr>
+                <td>Diego, Rafaela, Henrique</td>
+                <td>Educação Física</td>
+                <td>esportes, alongamento, coordenação motora, saúde.</td>
+            </tr>
+            <tr>
+                <td>Daniela, Caio, Elisa</td>
+                <td>Artes</td>
+                <td>desenho, pintura, escultura, história da arte.</td>
+            </tr>
+            <tr>
+                <td>Mariana, Igor, Luana</td>
+                <td>Filosofia</td>
+                <td>ética, lógica, filósofos clássicos, pensamento crítico.</td>
+            </tr>
+            <tr>
+                <td>Otávio, Priscila, Gustavo</td>
+                <td>Sociologia</td>
+                <td>cultura, sociedade, desigualdade social, movimentos sociais.</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
