--- a/opcoes/matricula/concluido.html
+++ b/opcoes/matricula/concluido.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Concluido</title>
+    <link rel="icon" type="image/png" href="/assets/logo.png">
 </head>
 <body>
     <h1>Matricula Concluida Com Sucesso!!!</h1>
