--- a/opcoes/materia/materia.html
+++ b/opcoes/materia/materia.html
@@ -6,10 +6,10 @@
     <title>Materias</title>
     <link rel="icon" type="image/png" href="/assets/logo.png">
 </head>
-<body>
-    <h1>Materias</h1>
+<body style="background-color: rgb(128, 128, 128);">
+    <h1 style="text-align: center;">Materias</h1>
 
-    <table border="1">
+    <table border="1" style="color: #ffffff;">
         <thead>
             <tr>
                 <th>Professor</th>
